add simple yarp proxy configuration

--- a/yarp-proxy/yarp-proxy.csproj
+++ b/yarp-proxy/yarp-proxy.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>yarp_proxy</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Yarp.ReverseProxy" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
