configure yarp with some transforms

--- a/yarp-proxy/appsettings copy.json
+++ b/yarp-proxy/appsettings copy.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
+      "catch-all-route" : {
+        "ClusterId": "cluster1",
+        "Match": {
+          "Path": "{**catch-all}"
+        }
+      },
       "normal-websocket-route": {
         "ClusterId": "cluster1",
         "Match": {
@@ -22,17 +28,6 @@
         "Transforms": [
           {
             "PathPattern": "/client/hubs/hub1/{**deviceid}"
-          }
-        ]
-      },
-      "test-websocket-route": {
-        "ClusterId": "cluster1",
-        "Match": {
-          "Path": "/test/{**deviceid}"
-        },
-        "Transforms": [
-          {
-            "PathPattern": "/websockets"
           }
         ]
       }
