add custom transformer that plugs into yarp config

--- a/yarp-proxy/appsettings.json
+++ b/yarp-proxy/appsettings.json
@@ -33,6 +33,10 @@
         "Transforms": [
           {
             "PathPattern": "/websockets"
+          }, 
+          {
+            "WebPubSubTransform": "yes please",
+            "DeviceId": "{**deviceid}"
           }
         ]
       }
