add ability to inject web pub sub access token

--- a/yarp-proxy/appsettings.json
+++ b/yarp-proxy/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "WebPubSub": {
+    "ConnectionString": "",
+    "HubName": "xstofhub"
+  },
   "ReverseProxy": {
     "Routes": {
       "normal-websocket-route": {
@@ -26,13 +30,13 @@
         ]
       },
       "test-websocket-route": {
-        "ClusterId": "cluster1",
+        "ClusterId": "azurewebpubsub",
         "Match": {
           "Path": "/test/{**deviceid}"
         },
         "Transforms": [
           {
-            "PathPattern": "/websockets"
+            "PathPattern": "/client/hubs/xstofhub"
           }, 
           {
             "WebPubSubTransform": "yes please",
@@ -46,6 +50,13 @@
         "Destinations": {
           "localhost-websocket-server": {
             "Address": "http://localhost:5284"
+          }
+        }
+      },
+      "azurewebpubsub": {
+        "Destinations": {
+          "azurewebpubsubbackend": {
+            "Address": "https://xstof-webpubsub.webpubsub.azure.com"
           }
         }
       }
