--- a/yarp-proxy/appsettings.json
+++ b/yarp-proxy/appsettings.json
@@ -56,7 +56,7 @@
       "azurewebpubsub": {
         "Destinations": {
           "azurewebpubsubbackend": {
-            "Address": "https://xstof-webpubsub.webpubsub.azure.com"
+            "Address": "this can even by empty"
           }
         }
       }
